# HUST_HeroAim_2024

./: CMakeLists.txt  INSTALL_WSL.md
src/: AutoAim.cpp  AutoAim.h
src/armor_detector/: CMakeLists.txt
src/armor_detector/include/: Inference.hpp  YOLOv10Detector.hpp
src/armor_detector/src/: Detector.cpp
src/driver/: CMakeLists.txt
src/driver/include/: VideoCapture.h  hik.h
src/driver/src/: VideoCapture.cpp  hik.cpp
src/driver/src/ros2-hik-camera-main/src/: hik_camera_node.cpp
src/pose_estimate/: CMakeLists.txt
src/utils/src/: Log.cpp
src/utils/tools/: init.json
